changed to hanaui

--- a/public/index.html
+++ b/public/index.html
@@ -7,18 +7,19 @@
         
         <title>Ultimate Privacy Guide</title>
 
+        <link rel="icon" href="assets/img/favicon.png">
         <link crossorigin="anonymous" rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify/themes/vue.css">
         <link crossorigin="anonymous" rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify-darklight-theme@latest/dist/style.min.css" title="docsify-darklight-theme" type="text/css">
     </head>
     <body>
         <!-- Main -->
-        <noscript>This page requires JavaScript to work, please enable it or just read it on <a href="https://github.com/OTAKKATO/ultimate-privacy-guide">Here</a>.</noscript>
+        <noscript>This page requires JavaScript to work, please enable it or just read it on <a href="https://github.com/hanaui-git/ultimate-privacy-guide">Here</a>.</noscript>
         <div id="app">Loading...</div>
 
         <script>
             window.$docsify = {
                 name: "Ultimate Privacy Guide",
-                repo: "/OTAKKATO/ultimate-privacy-guide",
+                repo: "/hanaui-git/ultimate-privacy-guide",
                 search: ["/"],
                 darklightTheme: {
                     siteFont : "Source Sans Pro, Helvetica Neue",
